--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="jumbotron">
                 <h2>Home</h2>
-                <p>This website decribes the homes of the members IDP group 1/2.</p>
+                <p>This website decribes the homes of the members IDP group 1.</p>
 
                   <div id="Carousel1" class="carousel slide bg-inverse w-50 ml-auto mr-auto">
                     <ol class="carousel-indicators">
