--- a/imprint.html
+++ b/imprint.html
@@ -52,7 +52,7 @@
                     <h3 class="panel-title">Imprint</h3>
                 </div>
                 <div class="panel-body">
-                  <p>IDP group 1/2<br />
+                  <p>IDP group 1<br />
                   <p> </p>
                   <p>E-Mail: <a href="mailto:mrx@campus.tu-berlin.de">mrx@campus.tu-berlin.de</a><p>
                   <p>Website: <a href="http://modelica-buildingsystems.de/IDP2020_Group1/index.html">http://modelica-buildingsystems.de/IDP2020_Group1/index.html</a></p>
