changed # to number

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </a>
                   </div>
 
-                  <p>The buildings are located in City 1 and City 2.</p>
+                  <p>The buildings are located in City One and City Two.</p>
             </div>
 
             <p>&copy; IDP 2020 Group 1</p>
